<resources>
    <string name="app_name" translatable="false">Flickers APP</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong, please try again later</string>
    <string name="continue_browsing_as_a_visitor">Continue browsing as a visitor</string>
    <string name="not_auth">You are not logged in yet. Log in or continue browsing as a visitor</string>
    <string name="text_alert">Alert</string>
    <string name="un_auth">Your account may have been logged out.</string>
    <string name="block">Your account has been banned by the administration. In the event of an error, please contact the administration</string>
    <string name="text_ok">OK</string>
    <string name="search_for_a_movie">Search for a movie…</string>
    <string name="rating">Rating :</string>
    <string name="movie_title">Movie title:</string>
    <string name="movie_year">Movie year:</string>
    <string name="movie_geners">Movie geners:</string>
    <string name="movie_cast">Movie cast:</string>
    <string name="movies">Movies</string>
    <string name="excuse_me_there_is_no_data">Excuse me! There is no data</string>
    <string name="movie_details">Movie details</string>
    <string name="sorry_there_is_no_flickers_for_this_movie">Sorry there is no flickers for this movie</string>
</resources>