<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.movie_details.MovieDetailsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_main_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_name_title"
                style="@style/tv_text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/movie_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_name_value"
                style="@style/tv_text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_name_title"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_year_title"
                style="@style/tv_text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/movie_year"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_name_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_year_value"
                style="@style/tv_text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_year_title"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_year_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_geners_title"
                style="@style/tv_text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/movie_geners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_year_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_geners_value"
                style="@style/tv_text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_geners_title"
                app:layout_constraintTop_toTopOf="@id/tv_movie_geners_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_cast_title"
                style="@style/tv_text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/movie_cast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_geners_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_cast_value"
                style="@style/tv_text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_cast_title"
                app:layout_constraintTop_toTopOf="@id/tv_movie_cast_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_flickers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_cast_value"
                app:spanCount="2"
                tools:listitem="@layout/item_movie_image" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_no_data"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_cast_value">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_no_data" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/tv_text_semi_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sorry_there_is_no_flickers_for_this_movie"
                    android:textAlignment="center" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>